<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="mantenerSesion">Mantener Sesion activa</string>
    <string name="nombre">Nombre</string>
    <string name="confirmarContrasena">Confirmar Contraseña</string>
    <string name="numeroTelefono">Numero de telefono</string>
    <string name="calificarServicio">Calificar Servicio</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="Direccion">C. Nueva Escocia 1885, Providencia 5a Secc., 44638 Guadalajara, Jal.</string>
    <string name="numero">33 3641 3250</string>
    <string name="opinion">Opinion</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="Enviar">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>