<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.InicioSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
        <!-- eliminar despues de poner el logo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="se supone aqui va el logo xD"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@color/material_dynamic_neutral40"
            />

        <EditText
            android:id="@+id/usuarioEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/usuario"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/contrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contrasena"
            android:layout_marginTop="10dp"
            />

        <CheckBox
            android:id="@+id/mantenerSesionCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mantenerSesion"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/iniciarSesionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciarSesion"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/registrarseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>